# ffc-python-sdk

./: .gitignore  README.md  memo.txt  pyproject.toml  setup.cfg
src/feature_flags_co/: __init__.py  ffc_client.py  ffc_user.py
