[metadata]
name = feature-flags-co
version = 0.0.20
author = Jiyun YANG
author_email = jiyun.yang.work@gmail.com
description = A Python SDK for feature-flags.co project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/feature-flags-co/ffc-python-sdk
project_urls =
    Bug Tracker = https://github.com/feature-flags-co/ffc-python-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src